objects/ssot__PatientMedReconRecommendation__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Patient Med Reconciliation Rcmd Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MedicationReconciliationId__c</fullName>
        <label>Medication Reconciliation</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NoteForPatientText__c</fullName>
        <label>Note For Patient</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NoteForProviderText__c</fullName>
        <label>Note For Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecommendationPriorityLevel__c</fullName>
        <label>Recommendation Priority Level</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecommendationReasonSubtype__c</fullName>
        <label>Recommendation Reason Subtype</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecommendationReasonType__c</fullName>
        <label>Recommendation Reason Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecommendationSubtype__c</fullName>
        <label>Recommendation Subtype</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecommendationType__c</fullName>
        <label>Recommendation Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemIdentifier__c</fullName>
        <label>Source System Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemModifiedDateTime__c</fullName>
        <label>Source System Modified Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemName__c</fullName>
        <label>Source System Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716721967205_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PatientMedReconRecommendation_Medica_rel</label>
        <referenceTo>ssot__PatientMedicationReconciliation__dlm</referenceTo>
        <relationshipLabel>PatientMedReconRecommendation_Medica_rel</relationshipLabel>
        <relationshipName>rel_1716721967205_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>